[package]
name = "node-template"
version = "2.0.0"
authors = ["Anonymous"]
build = "build.rs"
edition = "2018"

[[bin]]
name = "node-bdevux"
path = "src/main.rs"

[dependencies]
derive_more = "0.14.0"
futures = "0.1"
ctrlc = { version = "3.0", features = ["termination"] }
log = "0.4"
tokio = "0.1"
exit-future = "0.1"
parking_lot = "0.8.0"
parity-codec = "4.1.1"
trie-root = "0.14.0"
sr-io = { git = 'https://github.com/paritytech/substrate.git', rev = '6dc833c42ebb89a2684ed04be4689164eb59ca97' }
substrate-cli = { git = 'https://github.com/paritytech/substrate.git', rev = '6dc833c42ebb89a2684ed04be4689164eb59ca97' }
primitives = { package = "substrate-primitives", git = 'https://github.com/paritytech/substrate.git', rev = '6dc833c42ebb89a2684ed04be4689164eb59ca97' }
substrate-executor = { git = 'https://github.com/paritytech/substrate.git', rev = '6dc833c42ebb89a2684ed04be4689164eb59ca97' }
substrate-service = { git = 'https://github.com/paritytech/substrate.git', rev = '6dc833c42ebb89a2684ed04be4689164eb59ca97' }
inherents = { package = "substrate-inherents", git = 'https://github.com/paritytech/substrate.git', rev = '6dc833c42ebb89a2684ed04be4689164eb59ca97' }
transaction-pool = { package = "substrate-transaction-pool", git = 'https://github.com/paritytech/substrate.git', rev = '6dc833c42ebb89a2684ed04be4689164eb59ca97' }
network = { package = "substrate-network", git = 'https://github.com/paritytech/substrate.git', rev = '6dc833c42ebb89a2684ed04be4689164eb59ca97' }
consensus = { package = "substrate-consensus-aura", git = 'https://github.com/paritytech/substrate.git', rev = '6dc833c42ebb89a2684ed04be4689164eb59ca97' }
substrate-client = {  git = 'https://github.com/paritytech/substrate.git', rev = '6dc833c42ebb89a2684ed04be4689164eb59ca97' }
basic-authorship = { package = "substrate-basic-authorship", git = 'https://github.com/paritytech/substrate.git', rev = '6dc833c42ebb89a2684ed04be4689164eb59ca97' }
node-template-runtime = { git = 'https://github.com/paritytech/substrate.git', rev = '6dc833c42ebb89a2684ed04be4689164eb59ca97' }

[build-dependencies]
vergen = "3"
